<resources>
    <string name="app_name">AdjustableAudio</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_hearing_test">Hearing Test</string>
    <string name="title_microphone">Microphone</string>
    <string name="title_media_player">Media Player</string>
    <string name="title_settings">Settings</string>
    <string name="title_equalizer">Equalizer</string>
    <string name="title_volume">Volume</string>
    <string name="title_band_32">32</string>
...
    <string name="label_fourth_freq_band">1800 - 7000 Hz</string>
    <string name="label_fifth_freq_band">7000 - 20000 Hz</string>
    <string name="noise_filter">Noise Filter</string>
    <string name="speech_focus">Speech Focus</string>
    <string name="normal">Normal</string>
    <string name="title_permissions_dialog">Permissions Required</string>
    <string name="negative_button_dialog">CANCEL</string>
    <string name="positive_button_dialog">OK</string>
    <string name="dialog_msg_perms_main">Storage and Microphone Permissions are Required for this Application</string>
    <string name="toast_msg_permissions">Go to settings and enable permissions</string>
    <string name="dialog_msg_permission_storage">Storage permission is required for the media player. Go to settings and enable permissions!</string>
    <string name="dialog_msg_perms_record">Record audio permissions are required for the hearing aid. Go to settings and enable permissions!</string>
    <string name="dialog_msg_add_preset">Please Enter a Name for the Equalizer Setting</string>
...
    <string name="dialog_msg_rename_test_result">Please Enter a New Name for this Hearing Test Result</string>
    <string name="title_dialog_delete_test_result">Delete this Hearing Test Result</string>
    <string name="dialog_msg_delete_test_result">Are you sure? The result cannot be recovered after deleting</string>
    <string name="title_dialog_cancel_hearing_test">Cancel this Hearing Test?</string>
    <string name="dialog_msg_cancel_hearing_test">Are you sure? All progress will be lost</string>
    <string name="title_disclaimer">Disclaimer</string>
    <string name="agreement_disclaimer">I have read and understand the above disclaimer.</string>
    <string name="continue_button">Continue</string>
    <string name="title_dialog_hearing_test_insructions">Hearing Test Instructions</string>
    <string name="dialog_msg_hearing_test_instructions">To collect accurate results, please set your phone volume to max and take the test in a quiet room.\n\nSounds will play at increasing volume levels each second. Please press the button when you hear a sound.</string>
    <string name="got_it">Got it!</string>
    <string name="label_hearing_test_left_ear">Left</string>
    <string name="label_hearing_test_right_ear">Right</string>
    <string name="button_revert">REVERT</string>
    <string name="button_apply">APPLY</string>
</resources>

