...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HearingTestActivity">

    <LinearLayout
        android:id="@+id/hearing_test_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="fill"
        android:orientation="vertical">

        <TextView
...
                android:max="80"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/beep_ack_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:orientation="vertical">
...
                    android:textSize="40dp" />
            </LinearLayout>



            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/hearing_test_beep_ack_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/colorAccent"
                android:src="@drawable/ic_hearing_test_black_24dp"
                android:visibility="gone"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/hearing_test_start_test_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/colorAccent"
...
